idf/build/log/idf_py_stderr_output_258038
Command: make -j 14 all
Configuration Report                                                            
 ────────────────────────────────────────────────────────────────────────────── 
   Parser Version: 1                                                            
   Verbosity: default                                                           
   Defaults policy: sdkconfig                                                   
   Status: Finished with notifications                                          
                                                                                
  Disabled Symbols/Choices With User-Set Value                                  
   ──────────────────────────────────────────────────────────────────────────   
    * ESP_CONSOLE_UART_BAUDRATE (defined at                                     
    /home/johgor/esp-idf/components/esp_stdio/Kconfig:150) with user-set        
    value 115200 from /tmp/kconfgen_tmpjzv1ioau                                 
   ──────────────────────────────────────────────────────────────────────────   
 ────────────────────────────────────────────────────────────────────────────── 
CMake Warning at /home/johgor/esp-idf/tools/cmake/component_validation.cmake:106 (message):
  Private include directory
  '/home/johgor/esp-idf/components/esp_wifi/wifi_apps/roaming_app/include'
  belongs to component esp_wifi but is being used by component
  wpa_supplicant.  It is recommended to define the component dependency for
  wpa_supplicant on the component esp_wifi, i.e.  'idf_component_register(...
  PRIV_REQUIRES esp_wifi)' in the CMakeLists.txt of wpa_supplicant, and
  specify the included directory as idf_component_register(...
  PRIV_INCLUDE_DIRS <dir relative to component>) in the CMakeLists.txt of
  component esp_wifi.
Call Stack (most recent call first):
  /home/johgor/esp-idf/tools/cmake/component_validation.cmake:130 (__component_validation_check_include_dirs)
  /home/johgor/esp-idf/CMakeLists.txt:353 (__component_validation_run_checks)


CMake Warning at /home/johgor/esp-idf/tools/cmake/component_validation.cmake:106 (message):
  Private include directory
  '/home/johgor/esp-idf/components/esp_wifi/wifi_apps/roaming_app/src'
  belongs to component esp_wifi but is being used by component
  wpa_supplicant.  It is recommended to define the component dependency for
  wpa_supplicant on the component esp_wifi, i.e.  'idf_component_register(...
  PRIV_REQUIRES esp_wifi)' in the CMakeLists.txt of wpa_supplicant, and
  specify the included directory as idf_component_register(...
  PRIV_INCLUDE_DIRS <dir relative to component>) in the CMakeLists.txt of
  component esp_wifi.
Call Stack (most recent call first):
  /home/johgor/esp-idf/tools/cmake/component_validation.cmake:130 (__component_validation_check_include_dirs)
  /home/johgor/esp-idf/CMakeLists.txt:353 (__component_validation_run_checks)


CMake Warning at /home/johgor/esp-idf/tools/cmake/component_validation.cmake:106 (message):
  Private include directory
  '/home/johgor/esp-idf/components/wpa_supplicant/src' belongs to component
  wpa_supplicant but is being used by component esp_wifi.  It is recommended
  to define the component dependency for esp_wifi on the component
  wpa_supplicant, i.e.  'idf_component_register(...  PRIV_REQUIRES
  wpa_supplicant)' in the CMakeLists.txt of esp_wifi, and specify the
  included directory as idf_component_register(...  PRIV_INCLUDE_DIRS <dir
  relative to component>) in the CMakeLists.txt of component wpa_supplicant.
Call Stack (most recent call first):
  /home/johgor/esp-idf/tools/cmake/component_validation.cmake:130 (__component_validation_check_include_dirs)
  /home/johgor/esp-idf/CMakeLists.txt:353 (__component_validation_run_checks)


CMake Warning at /home/johgor/esp-idf/tools/cmake/component_validation.cmake:106 (message):
  Private include directory
  '/home/johgor/esp-idf/components/wpa_supplicant/esp_supplicant/src' belongs
  to component wpa_supplicant but is being used by component esp_wifi.  It is
  recommended to define the component dependency for esp_wifi on the
  component wpa_supplicant, i.e.  'idf_component_register(...  PRIV_REQUIRES
  wpa_supplicant)' in the CMakeLists.txt of esp_wifi, and specify the
  included directory as idf_component_register(...  PRIV_INCLUDE_DIRS <dir
  relative to component>) in the CMakeLists.txt of component wpa_supplicant.
Call Stack (most recent call first):
  /home/johgor/esp-idf/tools/cmake/component_validation.cmake:130 (__component_validation_check_include_dirs)
  /home/johgor/esp-idf/CMakeLists.txt:353 (__component_validation_run_checks)


/home/johgor/src/costar/src/core/TimeSync.cpp: In function 'void timesync::configureUtcNtp()':
/home/johgor/src/costar/src/core/TimeSync.cpp:13:26: error: 'configTime' was not declared in this scope
   13 | void configureUtcNtp() { configTime(0, 0, "pool.ntp.org", "time.nist.gov"); }
      |                          ^~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:177: esp-idf/main/CMakeFiles/__idf_main.dir/home/johgor/src/costar/src/core/TimeSync.cpp.obj] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/Makefile2:8964: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
